# OneSite

./: .gitignore  LICENSE  README.md  pyproject.toml
myproject_test/: site_config.json
myproject_test/backend/app/: main.py
myproject_test/backend/app/api/: api.py
myproject_test/backend/app/core/: config.py  db.py  logger.py
myproject_test/backend/app/schemas/: pagination.py
myproject_test/codegen/: backend_api_upload.py.j2  frontend_page_detail.tsx.j2  frontend_routes.tsx.j2  frontend_store.ts.j2  user_schema.py.j2
myproject_test/frontend/: package.json
myproject_test/models/: user.py
onesite/: generator.py  main.py
onesite/templates/: .gitignore
onesite/templates/backend/: Dockerfile  requirements.txt
onesite/templates/backend/app/: initial_data.py  main.py
onesite/templates/codegen/: api.py.j2  backend_config.py.j2  backend_main.py.j2  crud.py.j2  docker-compose.yml.j2  frontend_menu.tsx.j2  frontend_page_detail.tsx.j2  frontend_page_list.tsx.j2  frontend_routes.tsx.j2  frontend_service.ts.j2  frontend_store.ts.j2  frontend_vite.config.ts.j2  schema.py.j2  service.py.j2  user_crud.py.j2  user_service.py.j2
onesite/templates/frontend/: index.html  nginx.conf  package.json  vite.config.ts
onesite/templates/frontend/src/: App.tsx  main.tsx
onesite/templates/models/: user.py
src/onesite/: __init__.py  generator.py  main.py
src/onesite/codegen/: __init__.py  assets.py  config.py  envsync.py  i18n.py  introspect.py  pipeline.py  render.py  router.py  theme.py
src/onesite/templates/backend/: requirements.txt
(+119 files in other folders)
